--- a/css.css
+++ b/css.css
@@ -1,14 +1,35 @@
+body {
+    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);}
+
 #container {
-    position: relative;
-    left: 20%;
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     width: 600px;
     height: 600px;
+    border: 3px dotted black;
 
 }
 #container div {
     border: 1px solid black;
 }
 h1 {
+    text-align: center;
+}
+button {
+    text-align: center;
+    padding: 5px 30px;
 
+}
+#black {
+    background-color: black;
+    color: white;
+}
+#rainbow {
+    background: linear-gradient(90deg, red, orange, yellow, green, blue, purple);
+}
+.buttons {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 }
